objects/SVMXC__Installed_Product__c.object
<CustomObject>
    <fields>
        <fullName>BD_Escalation_Recommendation__c</fullName>
        <formula>IF( AND( NOT(ISNULL(SVMXC__Preferred_Technician__c)), 
          TEXT(SVMXC__Preferred_Technician__r.SVMXC__Role__c) = &quot;Depot Queue&quot;),
    &quot;Depot Repair&quot;, &quot;Field Service&quot;)</formula>
        <label>Escalation Recommendation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Obsolete_Material__c</fullName>
        <formula>SVMXC__Product__r.Part_Type__c  = &quot;DIEN&quot;</formula>
        <label>Is Obsolete Material?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build__c</fullName>
        <description>for FCO classes</description>
        <label>Build</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Calibrated__c</fullName>
        <label>Date Calibrated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <description>for FCO classes</description>
        <label>Major</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <description>for FCO classes</description>
        <label>Minor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_to_Next_Calibration__c</fullName>
        <description>Months to Next Calibration</description>
        <inlineHelpText>Months to Next Calibration</inlineHelpText>
        <label>Months to Next Calibration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PKI_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy PKI ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BillTo_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (Bill To Account)</relationshipLabel>
        <relationshipName>BillTo_Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BillTo_ExtId__c</fullName>
        <label>Bill To External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Building__c</fullName>
        <label>Building</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calibration_End_Date__c</fullName>
        <description>Calibration End Date</description>
        <inlineHelpText>Calibration End Date</inlineHelpText>
        <label>Calibration End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Calibration_Start_Date__c</fullName>
        <description>Calibration Start Date</description>
        <inlineHelpText>Calibration Start Date</inlineHelpText>
        <label>Calibration Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CatalogProfileDesc__c</fullName>
        <label>Catalog Profile Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CatalogProfile__c</fullName>
        <label>Catalog Profile</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompanyCodeDesc__c</fullName>
        <label>Company Code Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompanyCode__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CompletedTxnNum__c</fullName>
        <label>Completed Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ConfigurableMaterial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configurable Material</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Installed Products (Configurable Material)</relationshipLabel>
        <relationshipName>Installed_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ConstructionType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construction Type</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Installed Products (Construction Type)</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CostCenterDesc__c</fullName>
        <label>Cost Center Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CostCenter__c</fullName>
        <label>Cost Center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Department__c</fullName>
        <description>Calibrated Tools Department</description>
        <inlineHelpText>Calibrated Tools Department</inlineHelpText>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Equipment_ID__c</fullName>
        <description>Equipment ID on the Installed Product</description>
        <inlineHelpText>Equipment ID on the Installed Product</inlineHelpText>
        <label>Equipment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Field_Notes__c</fullName>
        <description>Non integrated field called &quot;field notes&quot;</description>
        <inlineHelpText>Non integrated field called &quot;field notes&quot;</inlineHelpText>
        <label>Field Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Floor__c</fullName>
        <label>Floor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Group__c</fullName>
        <description>Calibrated Tools Group Picklist</description>
        <inlineHelpText>Calibrated Tools Group Picklist</inlineHelpText>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAS</fullName>
                </value>
                <value>
                    <fullName>DX</fullName>
                </value>
                <value>
                    <fullName>EH</fullName>
                </value>
                <value>
                    <fullName>LSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_InternalNote__c</fullName>
        <label>Internal Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsAddress_OutOfSync__c</fullName>
        <formula>OR(SVMXC__Street__c &lt;&gt; SVMXC__Site__r.SVMXC__Street__c,
   SVMXC__City__c &lt;&gt; SVMXC__Site__r.SVMXC__City__c,
   SVMXC__State__c &lt;&gt; SVMXC__Site__r.SVMXC__State__c,
   SVMXC__Zip__c &lt;&gt; SVMXC__Site__r.SVMXC__Zip__c
)</formula>
        <label>Is Address Out Of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsMedicalDevice__c</fullName>
        <formula>IF ( OR(  SVMXC__Product__r.SMAX_PS_Medical_Classification__c = &apos;Yes&apos;, 
          SVMXC__Product__r.SMAX_PS_Medical_Classification__c = &apos;Relevant&apos;,
           CONTAINS(TEXT(SMAX_PS_UserStatus__c), &apos;MED&apos;)
        ), TRUE, FALSE
     )</formula>
        <label>Is Medical Device</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Calibrated__c</fullName>
        <description>Determines if the tool is in an active calibration status.</description>
        <formula>TODAY () &lt; SMAX_PS_Next_Calibration_Date__c &amp;&amp;  
ISPICKVAL(SMAX_PS_Status__c, &quot;Active&quot;) || ISPICKVAL(SMAX_PS_Status__c, &quot;Active - Metrology&quot;) || ISPICKVAL(SMAX_PS_Status__c, &quot;Calibration not Required&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if the tool is in an active calibration status.</inlineHelpText>
        <label>Is Calibrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_MTE_PermissionSet__c</fullName>
        <description>Denotes that the user has the mte permission set</description>
        <formula>$Permission.SMAX_PS_HasMTEPermission</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes that the user has the mte permission set</inlineHelpText>
        <label>Has MTE Permission Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Is_Pending_IP_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for creating Generic IP process</description>
        <inlineHelpText>Used for creating Generic IP process</inlineHelpText>
        <label>Is Pending IP Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LL_BillTo_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Language Bill To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (Local Language Bill To Account)</relationshipLabel>
        <relationshipName>LocalLang_BillTo_Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LL_BillTo_ExtId__c</fullName>
        <label>Local Language Bill To External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LL_ShipTo_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Language Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (Local Language Ship To Account)</relationshipLabel>
        <relationshipName>LocalLang_ShipTo_Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LL_ShipTo_ExtId__c</fullName>
        <label>Local Language Ship To External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LabManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lab Manager Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Installed Products (Lab Manager Contact)</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Last_Calibration_Date__c</fullName>
        <description>Calibrated Tools Last Calibration Date</description>
        <inlineHelpText>Calibrated Tools Last Calibration Date</inlineHelpText>
        <label>Last Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Last_Date_Serviced__c</fullName>
        <label>Last Date Serviced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Last_Servicing_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The last Technician to service this Installed Product, regardless of Work Order type (include PMs).</description>
        <inlineHelpText>The last Technician to service this Installed Product, regardless of Work Order type (include PMs).</inlineHelpText>
        <label>Last Servicing Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Installed Products (Last Servicing Technician)</relationshipLabel>
        <relationshipName>Last_Service_Tech</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Last_Work_Order_Details__c</fullName>
        <description>Details the last servicing technician, date of service and order type.</description>
        <inlineHelpText>Details the last servicing technician, date of service and order type.</inlineHelpText>
        <label>Last Work Order Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Linked_Equpiment__c</fullName>
        <description>Denotes the linked equipment to the current installed product</description>
        <inlineHelpText>Denotes the linked equipment to the current installed product</inlineHelpText>
        <label>Linked Equipment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LocationCodeDesc__c</fullName>
        <label>Location Code Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LongDescription__c</fullName>
        <label>Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Calibration_Period__c</fullName>
        <description>Used to view/set the calibration period.</description>
        <label>MTE Calibration Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>365</fullName>
                    <label>12 Months</label>
                </value>
                <value>
                    <fullName>730</fullName>
                    <label>24 Months</label>
                </value>
                <value>
                    <fullName>1095</fullName>
                    <label>36 Months</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Change_Description__c</fullName>
        <description>The text description of why the change was made</description>
        <label>MTE Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Change_Reason__c</fullName>
        <description>Used to group reason for a change in the calibrated tool record.</description>
        <label>MTE Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>Data Correction</fullName>
                </value>
                <value>
                    <fullName>Calibration Date Change</fullName>
                </value>
                <value>
                    <fullName>Updating Tool Status</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                    <isActive>false</isActive>
                    <label>B</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Country__c</fullName>
        <formula>TEXT(SMAX_PS_Responsible_Technician__r.SVMXC__Country__c)</formula>
        <inlineHelpText>Responsible technician country.</inlineHelpText>
        <label>MTE Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Custom_Calibration_Period_Nu__c</fullName>
        <description>Number field used to calculate the duration between start and end calibration date for a custom calibration</description>
        <inlineHelpText>Number field used to calculate the duration between start and end calibration date for a custom calibration</inlineHelpText>
        <label>MTE Custom Calibration Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Custom_Calibration_Period__c</fullName>
        <description>Count of months of custom calibration period.</description>
        <formula>(SMAX_PS_Next_Calibration_Date__c-SMAX_PS_Last_Calibration_Date__c)/30</formula>
        <inlineHelpText>Count of months of custom calibration period.</inlineHelpText>
        <label>MTE Custom Calibration Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MTE_Manufacturer__c</fullName>
        <description>Manufacturer of the MTE.</description>
        <label>MTE Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3M CO</fullName>
                </value>
                <value>
                    <fullName>A&amp;D ENG</fullName>
                </value>
                <value>
                    <fullName>AALBORG</fullName>
                </value>
                <value>
                    <fullName>ACCULAB</fullName>
                </value>
                <value>
                    <fullName>ACOPIAN</fullName>
                </value>
                <value>
                    <fullName>ADAVANTEST</fullName>
                </value>
                <value>
                    <fullName>AEROVOX</fullName>
                </value>
                <value>
                    <fullName>AGILENT</fullName>
                </value>
                <value>
                    <fullName>AIRFLOW</fullName>
                </value>
                <value>
                    <fullName>ALNOR INST</fullName>
                </value>
                <value>
                    <fullName>ALPHALAB INC</fullName>
                </value>
                <value>
                    <fullName>ALTHENA</fullName>
                </value>
                <value>
                    <fullName>AMETEK M&amp;G</fullName>
                </value>
                <value>
                    <fullName>AMETEK USG</fullName>
                </value>
                <value>
                    <fullName>AMPROBE INST</fullName>
                </value>
                <value>
                    <fullName>ANTON PAAR US</fullName>
                </value>
                <value>
                    <fullName>APEX TOOL</fullName>
                </value>
                <value>
                    <fullName>ARATRON II ELEC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA INST</fullName>
                </value>
                <value>
                    <fullName>ASSOC RESCH</fullName>
                </value>
                <value>
                    <fullName>B&amp;K PRECISION</fullName>
                </value>
                <value>
                    <fullName>BACHARACH</fullName>
                </value>
                <value>
                    <fullName>BALMAC</fullName>
                </value>
                <value>
                    <fullName>BALSTROM</fullName>
                </value>
                <value>
                    <fullName>BECKMAN INST</fullName>
                </value>
                <value>
                    <fullName>BELKNAP TOOL</fullName>
                </value>
                <value>
                    <fullName>BELL FW</fullName>
                </value>
                <value>
                    <fullName>BENNING</fullName>
                </value>
                <value>
                    <fullName>BIOSYSTEMS</fullName>
                </value>
                <value>
                    <fullName>BioTek</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_MaintenancePlantDesc__c</fullName>
        <label>Maintenance Plant Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_MaintenancePlant__c</fullName>
        <label>Maintenance Plant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ModelNumber__c</fullName>
        <label>Model Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ModelSeries__c</fullName>
        <description>The Model Series, used for matching to Skills in Auto-Assignment.
This field is filled-in from the &quot;SKILL_GROUP&quot; IP Classification.</description>
        <inlineHelpText>The Model Series, used for matching to Skills in Auto-Assignment.
This field is filled-in from the &quot;SKILL_GROUP&quot; IP Classification.</inlineHelpText>
        <label>Model Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Next_Calibration_Date__c</fullName>
        <description>Calibrated Tools Next Calibration Date</description>
        <inlineHelpText>Calibrated Tools Next Calibration Date</inlineHelpText>
        <label>Next Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Override_End_of_Life_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that allows for work orders to be created even if the installed product is end of life</description>
        <inlineHelpText>Checkbox that allows for work orders to be created even if the installed product is end of life</inlineHelpText>
        <label>Override End of Life Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PKI_Business_Unit__c</fullName>
        <label>PKI Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_PKI_MTE_ID__c</fullName>
        <description>Used for MTE.</description>
        <displayFormat>MTE-{0000000}</displayFormat>
        <inlineHelpText>Unique internal MTE ID.</inlineHelpText>
        <label>PKI MTE ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Payer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (Payer Account)</relationshipLabel>
        <relationshipName>Payer_Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Payer_ExtId__c</fullName>
        <label>Payer External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PlannerGroupDesc__c</fullName>
        <label>Planner Group Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PlannerGroup__c</fullName>
        <label>Planner Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PlanningPlantDesc__c</fullName>
        <label>Planning Plant Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PlanningPlant__c</fullName>
        <label>Planning Plant</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PreferredTechnicianNumber__c</fullName>
        <description>The External ID of the Preferred Technician</description>
        <inlineHelpText>The External ID of the Preferred Technician</inlineHelpText>
        <label>Preferred Technician Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Life_Cycle__c</fullName>
        <description>Denotes the serviceability of the product</description>
        <formula>TEXT(SVMXC__Product__r.SMAX_PS_Product_Life_Cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Denotes the serviceability of the product</inlineHelpText>
        <label>Product Life Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Recalculate_MTE_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in workflow rule to recalculate MTE period field</description>
        <inlineHelpText>Used in workflow rule to recalculate MTE period field</inlineHelpText>
        <label>Recalculate MTE Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Recommended_PM_Date__c</fullName>
        <description>Recommended PM Date from the Covered Product</description>
        <inlineHelpText>Recommended PM Date from the Covered Product</inlineHelpText>
        <label>Recommended PM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Recommended_PM_Date_from_Parent__c</fullName>
        <description>Recommended PM Date pulled from Parent IP</description>
        <formula>SVMXC__Parent__r.SMAX_PS_Recommended_PM_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recommended PM Date pulled from Parent IP</inlineHelpText>
        <label>Recommended PM Date from Parent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Responsible_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to track the technician responsible for a calibrated tool. Used on the calibrated tool layouts only.</description>
        <label>Responsible Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Installed Products (Responsible Technician)</relationshipLabel>
        <relationshipName>Calibrated_Tools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Room__c</fullName>
        <label>Room</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrgDesc__c</fullName>
        <label>Sales Org Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SalesOrg__c</fullName>
        <label>Sales Org</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Schedule_Date_Flexibility_1__c</fullName>
        <inlineHelpText>Number of days a Scheduled PM can be moved without alerting the manager</inlineHelpText>
        <label>Schedule Date Flexibility 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Schedule_Date_Flexibility_2__c</fullName>
        <inlineHelpText>Number of days a PM WO can be moved before needing approval</inlineHelpText>
        <label>Schedule Date Flexibility 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SecondaryTechnicianNumber__c</fullName>
        <description>The External ID of the Secondary Technician</description>
        <inlineHelpText>The External ID of the Secondary Technician</inlineHelpText>
        <label>Secondary Technician Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Secondary_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Installed Products (Secondary Technician)</relationshipLabel>
        <relationshipName>Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Serial_Number__c</fullName>
        <description>External ID Serial Number</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID Serial Number</inlineHelpText>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ShipTo_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (Ship To Account)</relationshipLabel>
        <relationshipName>ShipTo_Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ShipTo_ExtId__c</fullName>
        <label>Ship To External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldTo_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Installed Products (Sold To Account)</relationshipLabel>
        <relationshipName>SoldTo_Installed_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldTo_ExtId__c</fullName>
        <label>Sold To External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_StartUpDate__c</fullName>
        <label>StartUp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Status__c</fullName>
        <description>Shows the Calibrated Tool Status</description>
        <inlineHelpText>Shows the Calibrated Tool Status</inlineHelpText>
        <label>Tool Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active - Metrology</fullName>
                </value>
                <value>
                    <fullName>Calibration not Required</fullName>
                </value>
                <value>
                    <fullName>Out for Calibration</fullName>
                </value>
                <value>
                    <fullName>Out of Calibration</fullName>
                </value>
                <value>
                    <fullName>Out of Service</fullName>
                </value>
                <value>
                    <fullName>Out of Service - Metrology</fullName>
                </value>
                <value>
                    <fullName>Past Due</fullName>
                </value>
                <value>
                    <fullName>Pending Data Verification</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_System_ID__c</fullName>
        <description>Stores the ID from the IP for the Characteristic = EQUIPMENT_EQUIPMENTID. Populated via Work Flow</description>
        <label>System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tax_Jurisdiction__c</fullName>
        <formula>SVMXC__Company__r.SMAX_PS_Tax_Jurisdiction__c</formula>
        <label>Tax Jurisdiction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tax_Number_1__c</fullName>
        <formula>SVMXC__Company__r.SMAX_PS_Tax_Number_1__c</formula>
        <label>Tax Number 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tax_Number_3__c</fullName>
        <formula>SVMXC__Company__r.SMAX_PS_Tax_Number_3__c</formula>
        <label>Tax Number 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technical_ID_Number__c</fullName>
        <externalId>true</externalId>
        <label>Technical Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician_Manager__c</fullName>
        <formula>SMAX_PS_Responsible_Technician__r.SVMX_PS_Technician_Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technician Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ThirdPartyVendorName__c</fullName>
        <label>Third Party Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ThirdPartyVendorNumber__c</fullName>
        <label>Third Party Vendor Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_UserStatus__c</fullName>
        <label>User Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_ValidFrom__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
</CustomObject>